bpo-35984: _xxsubinterpreters: Fix memory leak in _channel_send() (GH-11845)

https://bugs.python.org/issue35984